[gd_scene load_steps=9 format=3 uid="uid://dx8sb0yjqkq5g"]

[ext_resource type="Script" uid="uid://cbm1d7wog058s" path="res://Scripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="Texture2D" uid="uid://b6ogn5acw5yvw" path="res://ui/menu/background-chess.jpg" id="2_ce3w2"]
[ext_resource type="FontFile" uid="uid://cflo4mxbqu2vb" path="res://Fonts/GrapeSoda.ttf" id="3_n45e2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4gkdq"]
texture = ExtResource("2_ce3w2")
modulate_color = Color(0.40832946, 0.40832946, 0.40832946, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfjwl"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.20392157)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_or6mk"]
bg_color = Color(0.63529414, 0.63529414, 0.63529414, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.20392157)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gvx18"]
bg_color = Color(0.8217887, 0.82178867, 0.82178867, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.20392157)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_or6mk"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ehe0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_4gkdq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.68817
offset_top = -40.5
offset_right = 184.68817
offset_bottom = 204.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="Start game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_tfjwl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_or6mk")
theme_override_styles/hover = SubResource("StyleBoxFlat_gvx18")
theme_override_styles/focus = SubResource("StyleBoxEmpty_or6mk")
text = "Start game
"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_tfjwl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_or6mk")
theme_override_styles/hover = SubResource("StyleBoxFlat_gvx18")
theme_override_styles/focus = SubResource("StyleBoxEmpty_or6mk")
text = "Options
"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_tfjwl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_or6mk")
theme_override_styles/hover = SubResource("StyleBoxFlat_gvx18")
theme_override_styles/focus = SubResource("StyleBoxEmpty_or6mk")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.5
offset_top = -252.0
offset_right = 230.5
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_fonts/font = ExtResource("3_n45e2")
theme_override_font_sizes/font_size = 101
text = "Chess game"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/Start game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
