extends Control

@onready var main_buttons: VBoxContainer = $MainButtons
@onready var options: Panel = $Options

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	# Estado inicial del menu 
	main_buttons.visible = true
	options.visible = false 


func _on_start_game_pressed() -> void:
	pass # Replace with function body.


func _on_options_pressed() -> void:
	main_buttons.visible = false
	options.visible = true 


func _on_exit_pressed() -> void:
	# Salir del juego 
	get_tree().quit()


func _on_back_options_pressed() -> void:
	_ready()
